--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,52 @@
-<section class="hero is-primary">
-    <div class="hero-body">
-        <div class="container">
-            <h1 class="title">
-                What's the weather like?
-            </h1>
+<div class="container">
+    <!-- Navbar Starts here -->
+    <nav class="navbar is-light is-fixed-top" role="navigation" aria-label="main navigation">
+
+        <!-- Navbar Brand containing the Heading -->
+        <div class="navbar-brand">
+            <a class="navbar-item has-background-success" href="#">
+                <h1 class="has-text-white">GeeksforGeeks</h1>
+            </a>
+
+            <!-- Burger Icons for responsive navbar -->
+            <a role="button"
+                class="navbar-burger"
+                aria-label="menu"
+                aria-expanded="false"
+                data-target="navbarBasicExample"
+            >
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
         </div>
-    </div>
-</section>
+
+        <!-- Navbar Menu containing a list of items -->
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item"> Home </a>
+                <a class="navbar-item"> Blogs </a>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link"> More </a>
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item"> About us </a>
+                        <a class="navbar-item"> Tutorials </a>
+                        <a class="navbar-item"> Practice </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Navbar End containing Sign Up and Sign In Buttons -->
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        <a class="button is-success">
+                            <strong>Sign up</strong>
+                        </a>
+                        <a class="button is-light"> Log in </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+</div>
