--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
         <!-- Navbar Brand containing the Heading -->
         <div class="navbar-brand">
             <a class="navbar-item has-background-success" href="#">
-                <h1 class="has-text-white">GeeksforGeeks</h1>
+                <h1 class="has-text-white">Weather Tracker</h1>
             </a>
 
             <!-- Burger Icons for responsive navbar -->
@@ -40,10 +40,14 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-success">
-                            <strong>Sign up</strong>
-                        </a>
-                        <a class="button is-light"> Log in </a>
+
+                        {% if request.user.is_authenticated %}
+                        <a href="" class="button is-light"><strong>{{ request.user.username }}</strong></a>
+                        <a href="{% url 'users:logout' %}" class="button is-success"><strong>Log out</strong></a>
+                        {% else %}
+                        <a class="button is-success"><strong>Sign up</strong></a>
+                        <a href="{% url 'users:login' %}" class="button is-light"> Sign in </a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
