--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
 
         <!-- Navbar Brand containing the Heading -->
         <div class="navbar-brand">
-            <a class="navbar-item has-background-success" href="#">
+            <a class="navbar-item has-background-success" href="/">
                 <h1 class="has-text-white">Weather Tracker</h1>
             </a>
 
