--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -18,7 +18,7 @@
             <h1>LOGIN PAGE</h1>
 
               <div class="field">
-                <label for="" class="label">Email</label>
+                <label for="" class="label">Username</label>
                 <div class="control has-icons-left">
                   <input type="username" placeholder="e.g. janedoe" class="input" name="username" required>
                   <span class="icon is-small is-left">
