--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
         <!-- Navbar Menu containing a list of items -->
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item"> Home </a>
+                <a class="navbar-item"> My Cities </a>
                 <a class="navbar-item"> Blogs </a>
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link"> More </a>
